# Tg_Chess_4_semester

./: .gitignore  LICENSE  README.md
Chess — копия/: Bishop_Cell.cpp  Bishop_Cell.h  CMakeLists.txt  Cell.cpp  Cell.h  Chess_Engine.cpp  Chess_Engine.h  DataBase.cpp  DataBase.h  Empty_Cell.cpp  Empty_Cell.h  Errors.txt  Game.cpp  Game.h  King_Cell.cpp  King_Cell.h  Knight_Cell.cpp  Knight_Cell.h  Manager.cpp  Manager.h  My_Blocking_Queue.cpp  My_Blocking_Queue.h  Pawn_Cell.cpp  Pawn_Cell.h  Queen_Cell.cpp  Queen_Cell.h  Rook_Cell.cpp  Rook_Cell.h  Run.cpp  Run.h  Server_Interface.cpp  Server_Interface.h  Server_Manager.cpp  Server_Manager.h  Table.cpp  Table.h
Chess — копия/Chess/: main.cpp
Chess — копия/DockerFile/: Dockerfile  docker-compose.yml
Chess — копия/Types/: DataBase_types.h  Game_types.cpp  Game_types.h
TGbot — копия/: main.py
